--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        <div class="row">
           <div class="col-lg-4 aos-init aos-animate" data-aos="fade-right"> <img src="img/gambar_anas.jpg" class="pic-abt img-fluid" alt="About Anas"></div>
           <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
-             <h3><b>Student Programmer.</b></h3>
+             <h3><b>Student Programmer</b></h3>
              <p class="fst-italic"> Here I would like to inform to you that I am a front-end developer who wants to develop a user-friendly and highly interactive web.</p>
              <div class="row">
                 <div class="col-lg-6">
